package behavioral.observer.ca6_character;

public interface PlayerDataListener {
    void listen(PlayerData playerData);
}
