@startuml
'https://plantuml.com/class-diagram

class PlayerData{
    - int thoiGian, countdown, grade
}
class DashBoard
interface PlayerDataListener{
    +void listen(PlayerData data)
}

PlayerDataListener <|.. DashBoard
DashBoard --> PlayerData:player
PlayerData --> PlayerDataListener:listener

note bottom of DashBoard
    concrete Observer
end note

note right of PlayerData
    Subject
    Các setter:
        khi cập nhật giá trị thì gọi phương thức listen của PlayerDataListener
end note

@enduml